@@ -1,3 +1,7 @@
+shmuel 2024-05-19 17:31:46+03:00 - build 834
+
+1. LuaFAR: refactoring.
+
 shmuel 2024-05-19 11:12:10+03:00 - build 833
 
 1. LuaFAR: refactoring.
